--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,17 @@ dependencies {
     compile 'com.squareup.okio:okio:1.11.0'
     // fastjson
     compile 'com.alibaba:fastjson:1.1.70.android'
+
+    // required, enough for most devices.
+    compile 'tv.danmaku.ijk.media:ijkplayer-java:0.6.2'
+    compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.6.2'
+
+    // Other ABIs: optional
+    compile 'tv.danmaku.ijk.media:ijkplayer-armv5:0.6.2'
+    compile 'tv.danmaku.ijk.media:ijkplayer-arm64:0.6.2'
+    compile 'tv.danmaku.ijk.media:ijkplayer-x86:0.6.2'
+    compile 'tv.danmaku.ijk.media:ijkplayer-x86_64:0.6.2'
+
+    // ExoPlayer as IMediaPlayer: optional, experimental
+    compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.6.2'
 }
