--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,11 +27,12 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     // okhttp
-    compile 'com.squareup.okhttp3:okhttp:3.6.0'
-    compile 'com.squareup.okio:okio:1.11.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.6.0'
+    implementation 'com.squareup.okio:okio:1.11.0'
     // fastjson
-    compile 'com.alibaba:fastjson:1.1.70.android'
+    implementation 'com.alibaba:fastjson:1.1.70.android'
 
+    /*
     // required, enough for most devices.
     compile 'tv.danmaku.ijk.media:ijkplayer-java:0.6.2'
     compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.6.2'
@@ -44,4 +45,6 @@ dependencies {
 
     // ExoPlayer as IMediaPlayer: optional, experimental
     compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.6.2'
+    */
+    implementation project(':ijkplayer-java')
 }
